--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@neondatabase/serverless": "^0.10.4",
+		"@radix-ui/react-slot": "^1.1.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.4.7",
+		"drizzle-orm": "^0.39.3",
 		"lucide-react": "^0.475.0",
 		"next": "15.1.7",
 		"react": "^19.0.0",
@@ -23,8 +27,10 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.30.4",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
+		"tsx": "^4.19.2",
 		"typescript": "^5"
 	},
 	"overrides": {
