--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^6.11.3",
+		"@hugeicons/react": "^1.0.3",
 		"@neondatabase/serverless": "^0.10.4",
 		"@radix-ui/react-slot": "^1.1.2",
 		"axios": "^1.7.9",
