--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
 		"@radix-ui/react-slot": "^1.1.2",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
+		"cloudinary": "^2.5.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.39.3",
+		"firebase": "^11.4.0",
 		"lucide-react": "^0.475.0",
+		"multer": "^1.4.5-lts.1",
 		"next": "15.1.7",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
@@ -28,6 +31,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@types/multer": "^1.4.12",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
